Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8020147/T8020147.out
T8020147.java:16:23: compiler.warn.redundant.cast: java.lang.String
T8020147.java:17:23: compiler.warn.redundant.cast: java.lang.String
- compiler.err.warnings.and.werror
1 error
2 warnings
